--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwindcss-debug-screens": "^2.2.1"
   },
   "devDependencies": {
