--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@next/font": "^14.2.6",
     "framer-motion": "^10.18.0",
-    "next": "14.2.6",
+    "fs": "0.0.1-security",
+    "next": "14.3.0-canary.59",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.3.0",
-    "tailwindcss-debug-screens": "^2.2.1"
+    "react-router-dom": "^6.26.1",
+    "tailwindcss-debug-screens": "^2.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
