--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@next/font": "^14.2.6",
     "framer-motion": "^10.18.0",
     "fs": "0.0.1-security",
-    "next": "14.3.0-canary.59",
+    "next": "15.0.0-rc.0",
     "nodemailer": "^6.9.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
